--- a/frontend/aquanet/src/layouts/Login.css
+++ b/frontend/aquanet/src/layouts/Login.css
@@ -1,15 +1,17 @@
 body{
-  /* background-image: url('./assets/large-triangles.svg'); */
-  background: linear-gradient(180deg, #1834CE 0%, #2BAAA1 100%);
-  background-attachment: fixed;
+  background-image: linear-gradient(180deg, #1834CE 0%, #2BAAA1 100%), 
+                    url('../assets/Images/background-img.svg');
+  /* background-attachment: fixed; */
   overflow-y: scroll;
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
+
 #root{
   justify-content: center;
   font-family: 'Montserrat', sans-serif;
   font-family: 'Roboto', sans-serif;
+  width: 100vw;
 }
 
 nav{
@@ -125,34 +127,44 @@ nav{
 }
 
 .name{
-  font-size: 48px;
+  font-size: 2.25rem;
   margin-bottom: 0px;
   margin-top: 0px;
+  padding: 0;
+  color: #1F1F23;
+  line-height: 2rem;
+}
+
+.name-2{
+  font-size: 2.25rem;
+  line-height: 2rem;
+  margin:0 0 0 4rem;
+  padding: 0;
   color: #1F1F23;
 }
 
 p.enter{
-  font-size: 32px;
-  margin-top: 0px;
+  font-size: 1.25rem;
+  margin-top: 2rem;
   color: #1F1F23;
 }
 
 .username{
-  width:396px;
-  font-size: 20px;
-  height: 32px;
+  width:24.75rem;
+  font-size: 1.5rem;
+  height: 3.125rem;
   padding: 12px;
   margin-bottom: 4px;
-  border-radius: 6px;
+  border-radius: 0.9375rem;
 }
 
 .password{
-  width:396px;
-  font-size: 20px;
-  margin-top: 4px;
+  width:24.75rem;
+  font-size: 1.5rem;
+  height: 3.125rem;
   padding: 12px;
-  height: 30px;
-  border-radius: 6px;
+  margin-bottom: 4px;
+  border-radius: 0.9375rem;
 }
 
 .login-user{
@@ -164,7 +176,7 @@ p.enter{
   justify-content: center;
   align-content: center;
   margin-top: 12px;
-  
+  text-align: right;
 }
 
 .forgotPassword{
@@ -174,25 +186,36 @@ p.enter{
   margin-top: 0;
 }
 
-.sign-in{
-  width: 404px;
-  height: 48px;
-  font-size: 30px;
+.log-in-btn{
+  display: flex;
+  width: 24.75rem;
+  height: 3.125rem;
+  font-size: 1.25rem;
   font-weight: bold;
   color: aliceblue;
   background-color: #1834CE;
   border-radius: 15px;
   border-style: none;
+  align-items: center;
+  justify-content: center;
 }
 
-.sign-in:hover{
+.log-in-btn:hover{
   cursor: pointer;
   border: 2px  #9fa6f4 solid;
 }
 
-.sign-in:active{
+.log-in-btn:active{
   background-color: #9fa6f4;
   transition: 0.2s ease;
+}
+
+.sign-in{
+  text-align: center;
+  font-size: 1.25rem;
+  color:aliceblue;
+  font-weight: bold;
+  margin-top:1.25rem;
 }
 
 .end-container{
@@ -207,6 +230,7 @@ p.enter{
   margin: 0;
   border-bottom: 3px #1834CE solid;
   width: fit-content;
+  color:black;
 }
 
 .collaborators-container{
