se agrega navbar.css y modifica profile.css

--- a/frontend/aquanet/src/layouts/Profile.css
+++ b/frontend/aquanet/src/layouts/Profile.css
@@ -124,6 +124,7 @@ body{
     align-items: center;
     color: #FFF;
     background-color: #1832C8;
+    font-size: 2rem;
 }
 
 .connect-btn:active{
