--- a/frontend/aquanet/src/layouts/Login.css
+++ b/frontend/aquanet/src/layouts/Login.css
@@ -1,10 +1,11 @@
 body{
-  background-image: linear-gradient(180deg, #1834CE 0%, #2BAAA1 100%), 
-                    url('../assets/Images/background-img.svg');
+  background-image:
+                    linear-gradient(180deg, #1834CE 0%, #2BAAA1 100%);
   /* background-attachment: fixed; */
   overflow-y: scroll;
   overflow-x: hidden;
   scroll-behavior: smooth;
+  background-repeat: no-repeat;
 }
 
 #root{
@@ -12,6 +13,11 @@ body{
   font-family: 'Montserrat', sans-serif;
   font-family: 'Roboto', sans-serif;
   width: 100vw;
+  background-image: url('../assets/Images/waterBackgroud.png');
+  background-size:75%;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: 20%;
 }
 
 nav{
