se eliminan zone identifier y se cambia el estilo del logo aquanet el home

--- a/frontend/aquanet/src/layouts/Login.css
+++ b/frontend/aquanet/src/layouts/Login.css
@@ -100,14 +100,30 @@ nav{
   margin-top: 50px;
   justify-content: space-around;
 }
+
 .description{
   width: 500px;
   align-items: center;
+  border: 2px solid aliceblue;
+  padding: 24px;
+  margin-top: 2rem;
+  height: fit-content
 }
+
 .title{
   color: antiquewhite;
-  font-size: 72px;
-  margin-bottom:12px ;
+  font-size: 4.5rem;
+  line-height: 4rem;
+  margin: 0;
+}
+
+.title-2{
+  color: antiquewhite;
+  font-size: 4.5rem;
+  line-height: 4rem;
+  margin-left: 6.5rem;
+  margin-bottom: 12px;
+  margin: 0 0 0 6.5rem;
 }
 
 .slogan{
