se actualizan estilos nuevamente

--- a/frontend/aquanet/src/layouts/Login.css
+++ b/frontend/aquanet/src/layouts/Login.css
@@ -151,7 +151,7 @@ nav{
 .name{
   font-size: 2.25rem;
   margin-bottom: 0px;
-  margin-top: 0px;
+  margin-top: 1.56rem;
   padding: 0;
   color: #1F1F23;
   line-height: 2rem;
