correcciones de estilos

--- a/frontend/aquanet/src/layouts/Blog.css
+++ b/frontend/aquanet/src/layouts/Blog.css
@@ -3,7 +3,10 @@ body{
     background-color: #FFF;
 }
 
-.blog{
+.blog-inf{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: aliceblue;
     color:black;
 }
@@ -49,7 +52,7 @@ body{
     align-items: center;
 }
 
-.name{
+.name-region-p{
     width: fit-content;
     font-size: 1.8rem;
     padding: 0.5rem;
