--- a/frontend/aquanet/src/layouts/Login.css
+++ b/frontend/aquanet/src/layouts/Login.css
@@ -1,7 +1,6 @@
 body{
   background-image:
                     linear-gradient(180deg, #1834CE 0%, #2BAAA1 100%);
-  /* background-attachment: fixed; */
   overflow-y: scroll;
   overflow-x: hidden;
   scroll-behavior: smooth;
@@ -28,6 +27,7 @@ nav{
   justify-content: space-between;
   padding: 0 ;
   top: 0px;
+  left: 0;
   z-index: 1000;
 }
 
@@ -110,7 +110,7 @@ nav{
   height: fit-content
 }
 
-.title{
+.title-home{
   color: antiquewhite;
   font-size: 4.5rem;
   line-height: 4rem;
