--- a/frontend/aquanet/src/layouts/ConfirmacionRegistro.css
+++ b/frontend/aquanet/src/layouts/ConfirmacionRegistro.css
@@ -19,118 +19,27 @@ body{
     background-position-x: center;
     background-position-y: 20%;
   }
-  
-  nav{
-    position:fixed;
-    display: flex;
-    flex-direction: row;
-    width:100%;
-    justify-content: space-between;
-    padding: 0 ;
-    top: 0px;
-    z-index: 1000;
+   
+  .reg-section {
+   display: flex; 
+   align-items: center;
+   flex-direction: column;
+   height: 100vh;
   }
-  
-  #navbarcont.navbar-container{
-    width: 100%;
-    display: contents;
+  .title-reg-main{
+    color: aliceblue;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    line-height: 75px;
   }
-  
-  
-  .navbar{
-    width: 100%;
-    display: inline-flex;
-    justify-content: space-between;
-    background-color:#3e52c2;
-    height: 36px;
-  }
-  
-  .navbar-left{
-    display: flex;
-  }
-  .navbar-left ul li ,
-  .navbar-right ul li {
-    text-decoration: none;
-    color: whitesmoke;
-    margin-inline: 12px;
-    padding: 0px;
-    height: 24px;
-    align-items: center;
-  }
-  .navbar-left ul li :hover,
-  .navbar-right ul li :hover{
-    color: plum;
-    cursor: pointer;
-  }
-  .menu{
-    display: none;
-  }
-  .navbar-left ul,
-  .navbar-right ul{
-    list-style: none;
-    padding:0px;
-    margin: 8px;
-    display: flex;
-    align-items: center;
-  }
-  .navbar-left ul{
-    margin-right: 50px;
-  }
-  
-  .navbar-left ul:hover{
-    cursor: pointer;
-  }
-  
-  .navbar-right{
-    margin-right: 50px;
-  }
-  
-  .navbar-right ul:hover{
-    cursor: pointer;
-  }
-  
-  .getInTouch{
-    font-weight: bold;
-  }
-  
-  .container{
+  .container-reg{
     display: flex;
     width: 100%;
     height:100%;
-    margin-top: 50px;
-    justify-content: space-around;
+    justify-content: center;
   }
   
-  .description{
-    width: 500px;
-    align-items: center;
-    border: 2px solid aliceblue;
-    padding: 24px;
-    margin-top: 2rem;
-    height: fit-content
-  }
-  
-  .title{
-    color: antiquewhite;
-    font-size: 4.5rem;
-    line-height: 4rem;
-    margin: 0;
-  }
-  
-  .title-2{
-    color: antiquewhite;
-    font-size: 4.5rem;
-    line-height: 4rem;
-    margin-left: 6.5rem;
-    margin-bottom: 12px;
-    margin: 0 0 0 6.5rem;
-  }
-
-  .description-one{
-    color: aliceblue;
-  }
-  
-  .login{
+  .login-reg{
     display: flex;
     flex-direction: column;
     background-color: rgba(240, 248, 255);
@@ -139,27 +48,14 @@ body{
     height: 29.93rem;
     align-items: center;
     padding: 18px;
-    margin-right: 450px;
-    margin-bottom: px;
-    margin-top: 50px;
     
   }
+
+  .login-user-reg{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   
-  .name{
-    font-size: 2.25rem;
-    margin-bottom: 0px;
-    margin-top: 0px;
-    padding: 0;
-    color: #1F1F23;
-    line-height: rem;
-  }
-  
-  .name-2{
-    font-size: 2.25rem;
-    line-height: 2rem;
-    margin:0 0 0 4rem;
-    padding: 0;
-    color: #1F1F23;
   }
   
   p.enter{
@@ -175,7 +71,8 @@ body{
     font-weight: bold;
 
   }
-  .log-in-btn{
+  
+  .reg-in-btn2-reg{
     display: flex;
     width: 15.75rem;
     height: 3.125rem;
@@ -187,105 +84,31 @@ body{
     border-style: none;
     align-items: center;
     justify-content: center;
-    margin-top: 120px;
-  }
-  .collaborators-title{
-    font-size: 36px;
-    padding: 0;
-    margin: 0;
-    border-bottom: 3px #1834CE solid;
-    width: fit-content;
-    color:black;
+    margin-top: 2rem;
   }
   
-  .collaborators-container{
+  .watermark-reg{
+    width: 52.5%;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+  }
+  .watermark-reg-container{
     display: flex;
-    margin-top: 24px;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: baseline;
   }
-  
-  .footer{
-    display: flex;
-    justify-content: center;
-    background-color:#3e52c2;
-    color: antiquewhite;
-    margin-top: 196px;
+
+  .watermark-link{
+    font-size: 2rem;
+    margin-right: 4rem;
+    margin-bottom: 1.44rem;
+    color: aliceblue;
   }
-  
-  .principal-footer{
-    width: auto;
-    text-align: center;
-    
+
+  .watermark-p {
+    font-size: 3rem;
+    margin-bottom: 1.5rem;
+    color: aliceblue;
+    margin-left: 55;
   }
-  
-  .aquanet-footer{
-    margin-top: 12px;
-    margin-bottom: 0px;
-    font-weight: 100;
-  }
-  
-  .aquanet-generation{
-    margin-block: 0;
-    font-weight: 100;
-  }
-  
-  .year{
-    margin-block: 0;
-    font-weight: 100;
-  }
-  
-  .team{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-top: 0;
-    height: fit-content;
-  }
-  
-  .team-int{
-    margin-inline: 12px;
-    margin-block: 6px;
-    text-align: center;
-    font-weight: 100;
-  }
-  
-  @media (max-width:640px){
-      .root{
-      flex-direction: column;
-      align-items: center;
-      padding: 12px;
-      }
-  
-      .container{
-        flex-direction: column;
-        align-items: center;
-      }
-  
-      .description{
-        height: 600px;
-      }
-    
-      .end-container{
-        display: flex;
-        flex-direction: column;
-      }
-  
-      .collaborators-container{
-        flex-direction: column;
-      }
-  
-    
-  
-      .collaborators:hover{
-        cursor: pointer;
-        scale: none;
-        transition: none;
-      }
-  
-      .collaborators{
-        margin-block:12px;
-        transform: scale(0.75);
-      }
-  
-  }
-  
