se agrega json de regiones

--- a/frontend/aquanet/src/components/NavBar.css
+++ b/frontend/aquanet/src/components/NavBar.css
@@ -68,4 +68,9 @@ nav{
   .navbar-right ul:hover{
     cursor: pointer;
   }
-  
+
+  /*Arianne */
+  .regiones-li {
+    display: flex;
+    flex-direction: column;
+  }
