--- a/frontend/aquanet/src/layouts/Notificacion.css
+++ b/frontend/aquanet/src/layouts/Notificacion.css
@@ -83,7 +83,7 @@
 }
 
 .container-card{
-  display: flex;
+    display: flex;
     border: 1px solid hsl(0, 0%, 80%);
     border-radius: 10px;
     box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.1);
@@ -91,16 +91,16 @@
     margin: 10px;
     text-align: left;
     max-width: 500px;
-  max-height: 100px;
+    max-height: 100px;
     justify-content: left;
 
 }
 .card-img{
-display:flex;
+    display:flex;
     max-width: 15%;
     height: 70px;
     border-radius: 50%;
-  justify-items: left;
+    justify-items: left;
 }
 .card-title{
   display:block;
@@ -121,4 +121,30 @@ display:flex;
   font-size: 10px;
     font-family: Arial, sans-serif;
     color: hsl(0, 0%, 2%);
+}
+
+.list-notif-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+  padding: 12px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  height: 19.4rem;
+  width: 95%;
+  border-radius: 12px 8px 8px 12px;
+  background-color: rgba(128, 128, 128, 0.325);
+  margin: 7.5rem 0.5rem 0.5rem 0.5rem;
+}
+
+.container-card-list{
+  display: flex;
+  border: 1px solid black;
+  margin: 12px;
+  list-style: none;
+  width: 95%;
+  border-radius: 15px;
+  background-color: rgba(0, 0, 255, 0.542);
 }
