--- a/frontend/aquanet/src/layouts/Blog.css
+++ b/frontend/aquanet/src/layouts/Blog.css
@@ -135,8 +135,50 @@ body{
     font-weight: 600;
 }
 
+@media (max-width:640px){
+    .root{
+    flex-direction: column;
+    align-items: center;
+    padding: 12px;
+    }
+
+    .front-photo{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .user-blog-container{
+        flex-direction: column;
+        align-items: center;
+        height: 600px;
+    }
+   .info-container{
+    width: 100%;
+   }
+
+    .maps{
+        height: 10rem;
+    }
+
+    .links-container{
+        padding-top: 1rem;
+    }
+
+    .links{
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
+
+    .links-li{
+        height: 5rem;
+    }
+
+    .title-l{
+        margin: 0;
+    }
 
 
-
-
+}
 
