--- a/frontend/aquanet/src/layouts/Blog.css
+++ b/frontend/aquanet/src/layouts/Blog.css
@@ -135,6 +135,24 @@ body{
     font-weight: 600;
 }
 
+.formBlog{
+    display: flex;
+    flex-direction: column;
+    width: 10rem;
+    padding-left: 10rem;
+    padding-top: 3rem;
+}
+
+.titleformBlog{
+    margin-bottom: 0.5rem;
+}
+
+.opcionesRegiones{
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 0.5rem;
+}
+
 @media (max-width:640px){
     .root{
     flex-direction: column;
@@ -181,4 +199,5 @@ body{
 
 
 }
+
 
