--- a/Aquanet-monorepo/frontend/src/layouts/Blog.css
+++ b/Aquanet-monorepo/frontend/src/layouts/Blog.css
@@ -135,7 +135,70 @@ body{
     font-weight: 600;
 }
 
+.formBlog{
+    display: flex;
+    flex-direction: column;
+    width: 10rem;
+    padding-left: 10rem;
+    padding-top: 3rem;
+}
 
+.titleformBlog{
+    margin-bottom: 0.5rem;
+}
+
+.opcionesRegiones{
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 0.5rem;
+}
+
+@media (max-width:640px){
+    .root{
+    flex-direction: column;
+    align-items: center;
+    padding: 12px;
+    }
+
+    .front-photo{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .user-blog-container{
+        flex-direction: column;
+        align-items: center;
+        height: 600px;
+    }
+   .info-container{
+    width: 100%;
+   }
+
+    .maps{
+        height: 10rem;
+    }
+
+    .links-container{
+        padding-top: 1rem;
+    }
+
+    .links{
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
+
+    .links-li{
+        height: 5rem;
+    }
+
+    .title-l{
+        margin: 0;
+    }
+
+
+}
 
 
 
