se conecta el back con vista de ONGS

--- a/Aquanet-monorepo/frontend/src/layouts/ongs.css
+++ b/Aquanet-monorepo/frontend/src/layouts/ongs.css
@@ -111,10 +111,10 @@
     justify-content: space-between;
     align-items: center;
   }
-  #task:hover{
+  /* #task:hover{
     transform: scale(1.09);
     transition: 0.8s ease;
-  }
+  } */
   
   .lister{
     display: flex;
@@ -131,10 +131,10 @@
     background-color: rgba(255, 255, 255, 0.315);
   }
   
-  .lister:hover{
+  /* .lister:hover{
     transform: scale(1.09);
     transition: 0.8s ease;
-  }
+  } */
   
   #delete{
     margin: 16px;
@@ -145,13 +145,13 @@
     justify-items: center;
   }
   
-  #delete:hover{
+  /* #delete:hover{
     cursor: pointer;
     font-size: 2rem;
     transform: rotate(360deg);
     transform-origin: 25% 25% 0;
     transition: 0.5s ease;
-  }
+  } */
   
   #check{
     margin: 16px;
@@ -162,11 +162,11 @@
     justify-items: center;
   }
   
-  #check:hover{
+  /* #check:hover{
     font-size: 2rem;
     transform-origin: 25% 25% 0;
     transition: 0.5s ease;
-  }
+  } */
   
   #prop{
     padding: 12px !important;
