--- a/Aquanet-monorepo/frontend/src/layouts/CargarPerfil.css
+++ b/Aquanet-monorepo/frontend/src/layouts/CargarPerfil.css
@@ -1,86 +1,47 @@
-/* body{
-    background-image:
-                      linear-gradient(180deg, #1834CE 0%, #2BAAA1 100%);
-    overflow-y: scroll;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-    background-repeat: no-repeat;
-  }
-  
-  #root{
-    display: flex;
-    justify-content: center;
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Roboto', sans-serif;
-    width: 100vw;
-    background-image: url('../assets/Images/waterBackgroud.png');
-    background-size:75%;
-    background-repeat: no-repeat;
-    background-position-x: center;
-    background-position-y: 20%;
-  }
+#form-loader-cont{
 
-.load-profile-section{
     display: flex;
-    flex-direction: column;
-    width: 40%;
-    margin: 50px;
-    padding: 24px;
-    border-radius: 25px;
-    background-color: rgba(240, 248, 255, 0.70);
-}
-
-.loader-right-container{
-    display:flex;
-    flex-direction: column;
-}
-
-.load-profile-photos{
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    height: 40vh;
-    margin: 50px;
-    padding: 24px;
-    border-radius: 25px;
-    background-color:rgba(240, 248, 255, 0.70);;
-}
-.load-profile-btncontainer{
-    display: flex;
-    width: 40%;
-    height: 10vh;
-    margin: 0px 0px 0px 50px;
-    padding: 24px;
-    border-radius: 25px;
-    background-color: rgba(240, 248, 255, 0.70);
-    justify-content: center;
-    align-items: center;
-    
-}
-
-#load-profile-button{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 60px;
-    width: 80%;
-    background-color: #1834CE;
-    font-weight: bold;
-    font-size: 1.8rem;
-}
-
-.load-profile{
-    display: flex;
-
+    color: #1F1F23;
 }
 
 .load-profile-p{
-    color:  #1F1F23;
-    font-weight: bold;
+    font-size: 1rem;
+    font-weight: 800;
 }
 
-.load-profile-inputs{
-    margin: 6px;
-    border-radius: 3px;
+.load-profile-section{
+   display:flex;
+   flex-direction: column;
+   width: 40%; 
+   background-color: rgba(240, 248, 255, 0.75);
+   margin:50px;
+   border-radius: 25px;
+   padding:50px
 }
- */
+
+.photo-loader-div{
+    background-color: rgba(240, 248, 255, 0.75);
+    margin: 50px;
+    border-radius: 25px;
+    padding: 50px;
+}
+.profile-photo-loader{
+    margin-inline: 25px;
+    margin-block: 5px;
+}
+
+.load-profile-btncontainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 50px 0 50px;
+    height: 10rem;
+    border-radius: 25px;
+    background-color:  rgba(240, 248, 255, 0.75);
+}
+
+#load-profile-button{
+    height: 70px;
+    width: 180px;
+    background-color:  #1832C8;
+}
